apps/20-media/frigate/overlays/dev/dataangel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.dataangel: B-small
      annotations:
        dataangel.io/bucket: "vixens-dev-frigate"
        dataangel.io/sqlite-paths: "/tmp/cache/frigate.db"
        dataangel.io/fs-paths: "/config"
        dataangel.io/s3-endpoint: "http://nas.truxonline.com:30157"
        dataangel.io/deployment-name: "frigate"
        dataangel.io/rclone-interval: "60s"
        dataangel.io/metrics-enabled: "true"
        dataangel.io/lock-enabled: "false"
    spec:
