apps/20-media/frigate/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "media-redirect-to-https@kubernetescrd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Frigate"
    gethomepage.dev/icon: "frigate.png"
    gethomepage.dev/group: "Security"
spec:
  ingressClassName: traefik
  rules:
    - host: "frigate.dev.truxonline.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 5000
  tls:
    - hosts:
        - "frigate.dev.truxonline.com"
      secretName: frigate-tls
